--- a/index.html
+++ b/index.html
@@ -51,5 +51,6 @@
 </head>
   <body class="bg-gray-900 text-gray-100 antialiased min-h-screen">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
